--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       </div>
 
       <div class="sub-lines" aria-hidden="false">
-        <span>🚀 Full Stack Developer II | Bank Of New York</span>
+        <span>🚀 Full Stack Developer | Bank Of New York</span>
         <span>🎓 IIT KGP | CGEC</span>
         <span>🏠 Durgapur to Chennai ✈</span>
       </div>
@@ -412,7 +412,7 @@
 
     <div class="card">
       <h3>Cooch Behar Government Engineering College</h3>
-      <div class="meta">B.Tech in Computer Science & Engineering | 2017 – 2021</div>
+      <div class="meta">B.Tech in Computer Science & Engineering | 2016 – 2020</div>
       <p>DGPA: 8.35 / 10</p>
       <div class="coursework"><strong>Relevant Coursework:</strong> Operating Systems, Computer Organization, Object-Oriented Programming, Theory of Computation, Data Structures & Algorithms, Computer Networking</div>
     </div>
