--- a/index.html
+++ b/index.html
@@ -464,7 +464,31 @@
           <div class="cert-links">Instructor: Andrew Ng · <a href="https://coursera.org/verify/specialization/YLX6R87CVFPB" target="_blank" rel="noopener">Verification</a></div>
         </div>
       </div>
-
+      <div class="cert-card">
+        <div class="cert-badge" aria-hidden="true">
+          <svg width="72" height="44" viewBox="0 0 72 44" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="IBM">
+            <rect rx="6" width="72" height="44" fill="#0F62FE"/>
+            <text x="50%" y="55%" dominant-baseline="middle" text-anchor="middle"
+                  font-family="Inter, Arial" font-size="11" fill="#fff">
+              IBM
+            </text>
+          </svg>
+        </div>
+      
+        <div class="cert-info">
+          <div class="cert-title">IBM Data Analyst — Professional Certificate</div>
+          <div class="cert-meta">
+            IBM (via Coursera) · Completed Jul 16, 2021 · 9 Courses
+          </div>
+          <div class="cert-links">
+            Skills: Excel, SQL, Python, Relational Databases, Data Visualization, Cognos Analytics ·
+            <a href="https://coursera.org/verify/professional-cert/8FUQ38RMWXYA"
+               target="_blank" rel="noopener">
+              Verification
+            </a>
+          </div>
+        </div>
+      </div>
       <div class="cert-card">
         <div class="cert-badge" aria-hidden="true">
           <svg width="72" height="44" viewBox="0 0 72 44" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="LeetCode">
@@ -539,7 +563,7 @@
 
   <div id="contact" style="height:1px;margin-top:-80px;visibility:hidden;"></div>
 
-  <footer>© 2026 Prosenjit Kundu · Backend & Distributed Systems Engineer</footer>
+  <footer>© 2026 Prosenjit Kundu · Backend & Full Stack Developer</footer>
 </div>
 
 <script>
