--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       </div>
 
       <div class="sub-lines" aria-hidden="false">
-        <span>🚀 Full Stack Developer II | Bank Of New York</span>
+        <span>🚀 Full Stack Developer | Bank Of New York</span>
         <span>🎓 IIT KGP | CGEC</span>
         <span>🏠 Durgapur to Chennai ✈</span>
       </div>
@@ -412,7 +412,7 @@
 
     <div class="card">
       <h3>Cooch Behar Government Engineering College</h3>
-      <div class="meta">B.Tech in Computer Science & Engineering | 2017 – 2021</div>
+      <div class="meta">B.Tech in Computer Science & Engineering | 2016 – 2020</div>
       <p>DGPA: 8.35 / 10</p>
       <div class="coursework"><strong>Relevant Coursework:</strong> Operating Systems, Computer Organization, Object-Oriented Programming, Theory of Computation, Data Structures & Algorithms, Computer Networking</div>
     </div>
@@ -464,31 +464,7 @@
           <div class="cert-links">Instructor: Andrew Ng · <a href="https://coursera.org/verify/specialization/YLX6R87CVFPB" target="_blank" rel="noopener">Verification</a></div>
         </div>
       </div>
-      <div class="cert-card">
-        <div class="cert-badge" aria-hidden="true">
-          <svg width="72" height="44" viewBox="0 0 72 44" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="IBM">
-            <rect rx="6" width="72" height="44" fill="#0F62FE"/>
-            <text x="50%" y="55%" dominant-baseline="middle" text-anchor="middle"
-                  font-family="Inter, Arial" font-size="11" fill="#fff">
-              IBM
-            </text>
-          </svg>
-        </div>
-      
-        <div class="cert-info">
-          <div class="cert-title">IBM Data Analyst — Professional Certificate</div>
-          <div class="cert-meta">
-            IBM (via Coursera) · Completed Jul 16, 2021 · 9 Courses
-          </div>
-          <div class="cert-links">
-            Skills: Excel, SQL, Python, Relational Databases, Data Visualization, Cognos Analytics ·
-            <a href="https://coursera.org/verify/professional-cert/8FUQ38RMWXYA"
-               target="_blank" rel="noopener">
-              Verification
-            </a>
-          </div>
-        </div>
-      </div>
+
       <div class="cert-card">
         <div class="cert-badge" aria-hidden="true">
           <svg width="72" height="44" viewBox="0 0 72 44" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="LeetCode">
@@ -563,7 +539,7 @@
 
   <div id="contact" style="height:1px;margin-top:-80px;visibility:hidden;"></div>
 
-  <footer>© 2026 Prosenjit Kundu · Backend & Full Stack Developer</footer>
+  <footer>© 2026 Prosenjit Kundu · Backend & Distributed Systems Engineer</footer>
 </div>
 
 <script>
